번역을 다듬습니다.

--- a/patterns/navigation.html
+++ b/patterns/navigation.html
@@ -2,15 +2,15 @@
 layout: default
 title: 이전(Back) 및 상위(Up) 탐색
 ---
-<p>일관된 탐색은 전반적인 사용자 경험에 있어 필수 요소라 할 수 있습니다.
-기본 탐색과 비교해 모순되고 예상할 수 없는 방향으로 동작하는 경우 사용자가 좌절할 수 있습니다.
-안드로이드 3.0은 전체적인 탐색 동작에 있어서 큰 변화를 소개했습니다.
+<p>전반적인 사용자 경험에 있어 일관된 탐색은 필수 요소라 할 수 있습니다.
+기본 탐색과 비교해 모순되고 예상할 수 없는 방향으로 탐색이 동작할 경우 사용자는 불만을 느낄 것입니다.
+안드로이드 3.0에서 전체적인 탐색 동작에 있어서 커다란 변화를 소개했는데요.
 계속해서 이어지는 이전(Back) 및 상위(Up)에 대한 가이드라인을 주의 깊게 따른다면
-당신의 앱은 사용자가 예측 가능하고 믿을 수 있는 탐색을 수행하게 도울 수 있을 것입니다.</p>
+여러분의 앱은 사용자가 예측 가능하고 믿을 수 있는 탐색을 수행하게 도울 수 있을 것입니다.</p>
 
 <p>안드로이드 2.3 및 이전 버전은 앱 내의 탐색 지원에 시스템 <em>이전</em> 버튼에 의존하고 있었습니다.
-안드로이드 3.0에서 액션 바와 함께 두번째 탐색 방식이 소개되었습니다:
-바로 앱 아이콘과 왼쪽 방향 표시로 이루어져 있는 <em>상위</em> 버튼입니다.</p>
+안드로이드 3.0에서 액션 바와 함께 두번째 탐색 방식을 소개했습니다:
+바로 앱 아이콘과 왼쪽을 가리키는 표시로 이루어져 있는 <em>상위</em> 버튼입니다.</p>
 
 
 <img src="../media/navigation_with_back_and_up.png">
@@ -18,16 +18,16 @@ title: 이전(Back) 및 상위(Up) 탐색
 
 
 <p>상위 버튼은 애플리케이션 내 화면 간 계층 의존적 탐색에 사용됩니다.
-예를 들어, 화면 A가 항목 목록을 표시하고 있을 때,
+예를 들어 화면 A가 항목 리스트를 표시하고 있을 때
 항목을 선택하면 (선택한 항목에 대해 더 자세한 내역이 표시되는) 화면 B로 이동하게 되며,
 화면 B는 화면 A로 돌아갈 수 있도록 상위 버튼을 제공해야 할 것입니다.</p>
 
-<p>현재 화면이 앱 최상위인 경우에는(즉 앱의 홈이라면), 상위 버튼을 표시해선 안됩니다.</p>
+<p>현재 화면이 앱 최상위인 경우에는(즉 앱의 홈이라면) 상위 버튼을 표시해선 안됩니다.</p>
 
 <p>시스템 이전 키는 사용자가 최근에 본 화면 기록을 기초로 시간 역순&#8212;사실 상 화면 간 시간 의존적&#8212;으로
 탐색하는데 사용합니다.</p>
 
-<p>이전에 봤던 화면이 현재 화면의 계층적 부모이기도 하다면,
+<p>이전에 봤던 화면이 현재 화면의 계층적 부모이기도 하다면
 이전 키를 누르는 것은 상위 버튼을 누르는 것과 동일한 결과를 낼 것입니다 -- 이것은 흔한 일입니다.
 하지만 사용자가 앱 내에 남아 있는 것을 보증하는 상위 버튼과는 달리, 이전 키는 사용자를 홈 화면이나
 다른 애플리케이션으로 이동시킬 수 있습니다.</p>
@@ -46,83 +46,82 @@ title: 이전(Back) 및 상위(Up) 탐색
 
 <h4>여러 진입점을 통한 화면 이동</h4>
 
-<p>간혹 어떤 화면은 앱 계층 구조 내에서 엄격한 위치를 갖고 있지 않아 다양한 진입점을 통해 도달할 수 있습니다&#8212;예를 들어
+<p>간혹 어떤 화면은 앱 계층 구조 내에서 엄격한 위치가 정해져 있지 않아서 다양한 진입점을 통해 도달할 수 있습니다&#8212;예를 들어
 설정 화면은 앱 내 어떤 화면에서든지 실행될 수 있습니다.
-이 경우, 상위 버튼은 이전 버튼과 동일하게 자신을 호출했던 화면을 선택해 돌아가도록 합니다.</p>
+이 경우 상위 버튼은 이전 버튼과 동일하게 자신을 호출했던 화면을 선택해 돌아가도록 합니다.</p>
 
 <h4>화면 내의 뷰 변경</h4>
 
 <p>화면 내에서 뷰 옵션을 변경했을 경우 상위 혹은 이전 키의 동작을 변경하지 않습니다: 화면은 여전히 앱 계층 내 동일한 곳에
-있으며, 새로운 탐색 기록이 만들어지지 않았기 때문입니다.</p>
+있으며 새로운 탐색 기록이 만들어지지 않았기 때문입니다.</p>
 
 <p>이와 비슷한 뷰 변경의 예제를 살펴보자면:</p>
 
 <ul>
 <li>탭을 사용하거나 좌우 스와이프로 뷰를 전환하는 경우</li>
 <li>드롭다운(접힌 탭으로도 알려진)을 사용해 뷰를 전환하는 경우</li>
-<li>목록 필터링</li>
-<li>목록 정렬</li>
+<li>리스트 필터링</li>
+<li>리스트 정렬</li>
 <li>디스플레이 스타일 변경(확대 등)</li>
 </ul>
-<h4>동일 계층 화면 간의 탐색</h4>
+<h4>동일 계층 화면 간 탐색</h4>
 
-<p>앱이 항목 목록을 표시한 후 그 중 한 항목의 세부 뷰를 표시하는 방식의 탐색을 지원한다면,
-현재 항목에서 목록의 이전 및 다음 항목으로 이동하는 기능을 지원하는 것은 가치 있는 일입니다.
-예를 들어, Gmail에서는 같은 받은 편지함의 대화 내역에서 좌나 우로 스와이프해
+<p>앱이 항목 리스트를 표시한 후 그 중 한 항목의 상세 뷰를 표시하는 방식의 탐색을 한다면
+현재 항목에서 리스트 이전 및 다음 항목으로 이동하는 기능을 지원하는 것은 가치 있는 일입니다.
+예를 들어 Gmail에서는 동일한 받은 편지함의 대화 내역 내에서 좌나 우로 스와이프해
 신규 및 이전 내역을 쉽게 볼 수 있습니다.
 화면 내의 뷰를 변경할 때와 동일하게 이러한 탐색은 상위 혹은 이전 버튼의 동작을 변경하지 않습니다.</p>
 
 
 <img src="../media/navigation_between_siblings_gmail.png">
-<p>그러나 주목할만한 예외가 "관련된" 세부 뷰를 열람할 때와 같은 경우&#8212;예를 들어
+<p>그러나 주목할만한 예외가 "관련된" 상세 뷰를 열람할 때와 같은 경우&#8212;예를 들어
 Google Play에서 같은 개발자의 다른 앱들을 열람하는 경우, 혹은 같은 아티스트의 다른 앨범들을 열람하는 경우&#8212;에
 발생할 수 있습니다.
-이와 같은 경우에는 각 링크를 따라갈 때 기록을 남김으로 이전 버튼을 눌렀을 때, 본 적이 있는 각 연관된 컨텐트로
-이동하게 됩니다.
+이와 같은 경우에는 각 링크를 따라갈 때 기록을 남겨둠으로, 이전 버튼을 누르면 본 적이 있는 각 연관된 컨텐트로
+이동할 수 있습니다.
 상위 버튼은 이전과 마찬가지로 이러한 관련 화면들은 무시하고 가장 최근에 봤던 컨테이너 화면으로 이동해야 합니다.</p>
 
 
 <img src="../media/navigation_between_siblings_market1.png">
-<p>세부 뷰의 정보량에 따라 상위 버튼이 더 깔끔하게 동작하게 할 수도 있습니다.
-위에 언급된 Google Play 예제를 확장해, 사용자가 책을 살펴 본 후에 책을 각색한 영화 내역을 열람했다고 가정해봅시다.
-이 경우에 상위 버튼은 사용자가 이전에 열람한 적이 없었다 해도 컨테이너(영화)로 돌아가게 할 수 있습니다.</p>
+<p>상세 뷰의 정보량에 따라 상위 버튼이 더 깔끔하게 동작하게 할 수도 있습니다.
+위에 언급된 Google Play 예제를 확장해, 사용자가 도서를 살펴 본 후에 해당 도서를 각색한 영화 내역을 열람했다고 가정해봅시다.
+이 경우 상위 버튼은 사용자가 이전에 열람한 적이 없었다 해도 컨테이너(영화)로 돌아가게 할 수 있습니다.</p>
 
 
 <img src="../media/navigation_between_siblings_market2.png">
-<h2 id="from-outside">앱 외부로부터의 탐색</h2>
+<h2 id="from-outside">앱 외부에서 호출되는 탐색</h2>
 
 
 <p>앱 외부에서 앱 계층 내로 깊숙히 들어오는 탐색에는 두가지 종류가 있습니다:</p>
 
 <ul>
-<li>인텐트 실행 등을 통한, 앱에서 앱으로 이어지는 탐색.</li>
-<li>알림과 홈 화면 위젯과 같은, 시스템에서 앱으로 이어지는 탐색.</li>
+<li>인텐트 실행 등을 통한, 앱에서 앱(App-to-app)으로 이어지는 탐색.</li>
+<li>알림과 홈 화면 위젯과 같은, 시스템에서 앱(System-to-app)으로 이어지는 탐색.</li>
 </ul>
-<p>Gmail은 이러한 사례 모두를 제공합니다. "공유" 인텐트를 누르면 곧바로 메일 작성 화면으로 이동해, 앱에서 앱으로 이어지는 탐색을 하게 됩니다.
-새 메시지 알림과 홈 스크린 위젯은 받은 편지함 화면을 건너 뛰고 사용자가 곧바로 대화 뷰로 진입해,
-시스템에서 앱으로 이어지는 탐색을 볼 수 있습니다.</p>
+<p>Gmail에서 이와 같은 모든 사례를 볼 수 있습니다. '앱에서 앱으로 이어지는 탐색'은 "공유" 인텐트를 눌러 곧바로 메일 작성 화면으로 이동했을 때 볼 수 있습니다.
+'시스템에서 앱으로 이어지는 탐색'은 사용자가 새 메시지 알림과 홈 스크린 위젯을 통해 받은 편지함 화면을 건너 뛰고 곧바로 대화 뷰로 진입하는 경우에 볼 수 있습니다.</p>
 
 <h4>앱에서 앱으로 이어지는 탐색</h4>
 
-<p>인텐트를 통해 다른 앱에서 당신의 앱 계층 깊숙히 곧바로 들어왔을 때, 이전 버튼을 누르면 해당 화면을 호출했던 앱으로 돌아가게 될 것입니다.</p>
+<p>인텐트를 통해 다른 앱에서 여러분의 앱 계층 깊숙히 곧바로 들어왔을 때 이전 버튼을 누르면 해당 화면을 호출했던 앱으로 돌아가게 될 것입니다.</p>
 
 <p>상위 버튼은 다음과 같이 다루어집니다:
 - 앱 내에 다다른 화면이 일반적으로 특정한 한 화면에서 불리는 경우라면, 상위 버튼을 누르면 그 화면으로 이동해야 합니다.
 - 그 외의 경우에는, 상위 버튼을 누르면 앱의 최상위("홈") 화면으로 이동해야 합니다.</p>
 
-<p>예를 들어, Google Play에서 보고 있던 책의 공유를 선택하면 사용자는 Gmail 내 작성 화면으로 곧바로 이동하게 됩니다.
-이 때, 상위 버튼을 누르는 경우 (일반적으로 메일 작성 화면을 호출하는 화면이면서 이 앱의 시작 화면이기도 한) 받은 편지함으로 이동하며,
+<p>예를 들어, Google Play에서 보고 있던 책의 공유를 선택하면 사용자는 Gmail 내 메일 작성 화면으로 곧바로 이동하게 됩니다.
+이 때, 상위 버튼을 누르는 경우 (일반적으로 메일 작성 화면을 호출하는 화면이면서 이 앱의 시작 화면이기도 한) 받은 편지함으로 이동하고
 이전 버튼을 누르는 경우에는 Google Play로 돌아가게 됩니다.</p>
 
 
 <img src="../media/navigation_from_outside_up.png">
 <h4>시스템에서 앱으로 이어지는 탐색</h4>
 
-<p>알림이나 홈 화면 위젯과 같은 시스템 장치에 의해 앱으로 들어 온 경우,
+<p>알림이나 홈 화면 위젯과 같은 시스템 장치에 의해 앱으로 들어 온 경우
 상위 버튼은 위에서 언급한 앱에서 앱으로 이어지는 탐색과 동일하게 동작할 것입니다.</p>
 
 <p>이전 키를 누르면 탐색이 예상대로 수행되도록
-작업 백스택(back stack)에 앱의 최상위 화면까지 상위로 이동 할 수 있는 경로를 삽입해야 합니다.
+작업 백스택(back stack)에 앱의 최상위 화면까지 상위로 이동해 갈 수 있도록 이동 경로를 삽입해야 합니다.
 이렇게 한다면 사용자는 어떻게 이 앱에 들어왔는지 잊고 앱에서 빠져나가기 전에
 안전하게 앱 최상위 화면을 열람하게 될 것입니다.</p>
 
