--- a/patterns/notifications.html
+++ b/patterns/notifications.html
@@ -2,24 +2,24 @@
 layout: default
 title: 알림(Notifications)
 ---
-<p>알림 시스템은 대화 앱에 새로운 메시지가 도착했거나 캘린더에 이벤트가 있을 때와 같이,
-당신의 앱이 사용자에게 중요한 이벤트를 통보할 수 있도록 해 줍니다.</p>
+<p>알림 시스템은 대화 앱에 새로운 메시지가 도착했거나 캘린더에 이벤트가 있을 때와 같은 상황에서
+여러분의 앱이 중요한 이벤트를 사용자에게 통보할 수 있도록 해 줍니다.</p>
 
 <p>간결하고 쾌적하면서도 정중한 느낌을 주는 앱을 만들기 위해
 알림을 주의 깊게 디자인하는 것이 중요합니다.
 알림은 앱의 목소리와도 같고, 앱에 개성 또한 부여합니다.
-원치 않고 중요하지 않은 알림은 사용자를 짜증나게 할 수 있으므로 신중하게 사용해주세요.</p>
+원하지도 않고 중요하지도 않은 알림은 사용자를 짜증나게 할 수 있으므로 신중하게 사용해주세요.</p>
 
 <h4>알림을 표시해야 할 때</h4>
 
-<p>사람들에게 사랑받는 애플리케이션을 만들려면,
+<p>사람들에게 사랑 받는 애플리케이션을 만들려면,
 사용자의 주의와 시선은 보호되어야 할 리소스 임을 인식하는 것이 중요합니다
 소프트웨어 개발자가 이해할 수 있는 표현을 빌리자면, 사용자는 어떤 값을 바로 반환받기 위해 호출할 수 있는 메소드가 아닙니다.
 사용자의 시선을 스레드 리소스에 빗대자면, 알림을 생성하면
-잠깐 사용자 스레드가 중단되고 그것을 처리해야만 방해했던 알림이 사라지는 것입니다.</p>
+잠깐 사용자 스레드가 중단되어버리고 그것을 처리해야만 방해했던 알림이 사라지는 것입니다.</p>
 
 <p>안드로이드 알림 시스템은 사용자가 작업에 집중하는 동안에도 빠르게 이벤트를 통지할 수 있도록 디자인되었지만
-여전히 알림을 생성할지 결정할 때 양심적이 되는 것은 중요합니다.</p>
+여전히 알림을 생성할지 판단할 때 양심적이 될 필요가 있습니다.</p>
 
 <p>잘 만들어진 앱은 요청하지 않았지만 어쩔 수 없이 사용자를 방해해야 하는
 한정된 경우에만 알림을 표시합니다.
@@ -27,8 +27,8 @@ title: 알림(Notifications)
 
 <p>알림은 주로 <string>시간 기반 이벤트</string>에 사용되어야 하며,
 특히 <strong>다른 사람과 엮인</strong> 동시적 이벤트(synchronous events)인 경우 더욱 그러합니다.
-예를 들어, 받은 대화는 실시간이며 동시적 커뮤니케이션입니다: 다른 사용자가 응답을 기다리는 중이라구요.
-캘린더 이벤트는 알림을 사용해 사용자가 주의를 기울이도록 해야 할 또다른 좋은 예입니다.
+예를 들어, 채팅 메시지를 받는 것은 실시간 동시적 커뮤니케이션입니다: 다른 사용자가 응답을 기다리는 중이라구요.
+알림을 사용해 사용자가 주의를 기울이도록 해야 할 또다른 좋은 예로 캘린더 이벤트가 있습니다.
 왜냐면 해당 이벤트가 임박했으며, 캘린더 이벤트는 종종 다른 사람과 엮여 있기 때문입니다.</p>
 
 
@@ -43,29 +43,29 @@ title: 알림(Notifications)
 <p>알림을 사용하지 말아야 할 몇가지 상황이 있습니다:</p>
 <ul>
 <li>
-<p>사용자에게 분명하게 알려야 할 정보도 아니고 긴급하지도 않은 정보라면 알려주지 마세요.
-예를 들어 소셜 네트워크와 같이 비동시적이고 대상도 불분명한 많은 양의 업데이트는
-실시간으로 방해를 하는 것이 허락되지 않습니다.</p>
+<p>사용자에게 꼭 알려야 할 정보도 아니고 긴급하지도 않은 정보라면 알려주지 마세요.
+예를 들어 소셜 네트워크와 같이 비동시적이고 대상도 불분명한 많은 양의 업데이트 정보는
+실시간으로 사용자를 방해하는 것이 허락되지 않습니다.</p>
 </li>
 <li>
-<p>관련 새 정보가 현재 화면에 나타나는 경우라면 알림을 만들지 마세요. 대신 현 애플리케이션 UI에
+<p>관련된 새 정보가 현재 화면에 바로 나타나는 경우라면 알림을 만들지 마세요. 대신 현재 애플리케이션 UI에
 문맥 내에 새로운 정보가 있음을 사용자에게 바로 알려주세요.
 예를 들어 대화 애플리케이션은 사용자가 다른 사용자와 대화 중일 때는 시스템 알림을 생성하지 않아야 합니다.</p>
 </li>
 <li>
-<p>사용자가 개입하지 않아도 시스템 스스로 알아서 처리할 수 있다면,
-저장 중이거나 동기화 중이거나 애플리케이션을 업데이트하는 중과 같은 저수준 기술 정보로
+<p>사용자가 개입하지 않아도 시스템 스스로 알아서 처리할 수 있다면
+저장 중, 동기화 중, 애플리케이션을 업데이트하는 중 등의 저수준 기술 정보로
 사용자를 방해하지 마세요.</p>
 </li>
 <li>
-<p>사용자가 어떤 명령을 내리지 않아도 애플리케이션 스스로 빠르게 문제에서 벗어날 수 있다면
+<p>굳이 어떤 명령을 내리지 않아도 애플리케이션이 스스로 알아서 빠르게 문제에서 벗어날 수 있다면
 오류를 알려 사용자를 방해하지 마세요.</p>
 </li>
 <li>
 <p>사용자가 스스로 시작하거나 멈출 수 없는 서비스에는 알림을 사용하지 마세요.</p>
 </li>
 <li>
-<p>단지 사용자에게 브랜드를 알리기 위한 불필요한 알림은 만들지 마세요.
+<p>단지 브랜드를 알리기 위한 불필요한 알림은 만들지 마세요.
 그런 알림은 그저 사용자를 불만스럽게 만들어 고객을 잃게 만들 뿐입니다.
 애플리케이션의 사용자에게 소량의 최신 정보를 제공하면서도 지속적으로 관심을 갖게 만드는 최고의 방법은
 홈 화면에 배치하고 싶은 위젯을 개발하는 것입니다.</p>
@@ -91,9 +91,9 @@ title: 알림(Notifications)
 
 <h4>개인화 하세요</h4>
 <p>다른 사용자의 (메시지나 상태 업데이트와 같은) 내역을 알릴 때
-사용자의 이미지를 포함하세요.</p>
+사용자 이미지를 포함하세요.</p>
 <p>앱 아이콘은 알림에서 두번째 아이콘으로 포함된다는 걸 기억하세요.
-따라서 사용자는 여전히 어떤 앱이 알림을 표시하는지 분간할 수 있습니다.</p>    
+따라서 여전히 사용자는 어떤 앱이 알림을 표시하는지 분간할 수 있습니다.</p>    
 
   </div>
 </div>
@@ -101,9 +101,9 @@ title: 알림(Notifications)
 
 <h4>올바른 곳으로 탐색하세요</h4>
 
-<p>사용자가 알림을 터치했을 때, 앱이 사용자가 알림에서 표시되고 있는 자료를 바로 확인하고 처리할 수 있는 곳에서 열리도록 해주세요.
-대부분 (메시지와 같은) 단일 자료 항목을 표시하는 세부 뷰를 열겠지만,
-알림이 누적되어(아래 <em>누적된 알림</em> 참조) 여러 항목을 참조하는 경우 요약 뷰를 열 수도 있을 것입니다.
+<p>사용자가 알림을 터치하면 알림에서 표시되고 있는 자료를 바로 확인해 처리할 수 있는 곳에서 앱을 열도록 해주세요.
+대부분 (메시지와 같은) 단일 자료 항목을 표시하는 상세 뷰를 열겠지만,
+알림이 중첩되어(아래 <em>중첩된 알림</em> 참조) 여러 항목을 참조하는 경우 요약 뷰를 열 수도 있을 것입니다.
 이 때 사용자가 앱의 탑 레벨 내의 계층 레벨에 도착한다면,
 시스템 백 키로 앱의 최상위로 이동할 수 있도록 앱의 백 스택에 이동 경로를 삽입해주세요.
 더 자세한 정보는 <a href="navigation.html">탐색</a> 디자인 패턴의 <em>시스템에서 앱으로 이어지는 탐색</em> 장에서 볼 수 있습니다.
@@ -115,19 +115,19 @@ title: 알림(Notifications)
 알림에서 이러한 시간 표시가 유용한지 검토해주세요.
 만약 시간 표시가 불필요하다면 해당 이벤트가 사용자의 주의를 끌기 위해
 알림으로 표시되어야 할 중요한 이유가 충분히 있는지 고려해주세요.
-만약 알림이 정말 중요하다면 이제 시간 표시를 제거해도 괜찮을지 결정하도록 합시다.</p>
+만약 알림이 정말 중요하다면 이제 다시 시간을 표시하지 않아도 괜찮을지 검토하도록 합시다.</p>
 
 <p>사용자가 얼마 전에 알림이 발생했는지 알아야 하는 경우라면 알림 시간을 포함해 주세요.
-알림 시간의 좋은 사례로 커뮤니케이션 통지(이메일, 메시징, 대화, 음성 메일)가 있습니다.
-사용자가 메시지의 맥락을 이해하거나 어떤 응답을 해야 할 때 시간 정보가 필요할 수 있습니다.</p>
+알림 시간 표시의 좋은 사례로 커뮤니케이션 통지(이메일, 메시징, 대화, 보이스 메일)가 있습니다.
+사용자가 메시지의 맥락을 이해하거나 어떤 응답을 해야 하는 경우 시간 정보가 필요할 수 있습니다.</p>
 
-<h4>알림을 누적시켜주세요</h4>
+<h4>알림을 중첩시켜주세요</h4>
 
 <p>알림이 계류(pending) 상태인데 동일한 타입의 새로운 알림을 추가로 표시해야 할 경우라면
 완전히 새로운 알림 객체를 생성하는 것은 피해주세요.
-그 대신 알림을 누적시켜주세요.</p>
+그 대신 알림을 중첩시켜 주세요.</p>
 
-<p>누적 알림은 사용자가 특정 종류의 알림이 얼마나 많이 계류 중인지 간단한 개요를 표시합니다.</p>
+<p>중첩 알림은 사용자가 특정 종류의 알림이 얼마나 많이 계류 중인지 간단한 개요를 표시합니다.</p>
 
 <p><strong>이러지 마세요</strong>:</p>
 
@@ -169,7 +169,7 @@ title: 알림(Notifications)
 </div>
 
 
-<h4>알림을 선택사항으로 만들어주세요</h4>
+<h4>알림을 선택 사항으로 만들어주세요</h4>
 
 <p>사용자는 언제나 알림을 제어할 수 있어야 합니다.
 애플리케이션 설정에 알림 설정을 추가해 사용자가 알림을 끌 수 있도록 허용하세요.</p>
@@ -187,7 +187,7 @@ title: 알림(Notifications)
 <p><strong>이러지 마세요</strong>:</p>
 
 <ul>
-<li>다른 앱과 구별 짓기 위해 색을 사용하지 마세요. 일반적으로 알림 아이콘은 단색이어야 합니다.</li>
+<li>다른 앱과 구별 짓는다고 색상을 사용하지는 마세요. 일반적으로 알림 아이콘은 단색이어야 합니다.</li>
 </ul>
 <h2 id="interacting-with-notifications">알림과 상호 작용</h2>
 
@@ -201,7 +201,7 @@ title: 알림(Notifications)
 
 <p>알림은 알림 영역의 아이콘으로 식별되며 알림 서랍을 열어 접근할 수 있습니다.</p>
 <p>서랍 내에서 알림은 발생 시간 순으로 정렬되어 최근 알림이 가장 윗쪽에 배치됩니다.
-특정 알림을 터치하면 연관된 알림에 맞는 자세한 컨텐트를 표시하는 앱을 열게 됩니다.
+특정 알림을 터치하면 연관된 알림에 맞는 자세한 내용을 표시하는 앱을 열게 됩니다.
 알림을 좌나 우로 스와이프해 서랍에서 알림을 지울 수 있습니다.</p>
 
   </div>
@@ -212,7 +212,7 @@ title: 알림(Notifications)
   <div class="layout-content-col span-6">
 
 <p>타블렛에서는 알림 영역이 화면 아래 시스템 바에 통합되어 있습니다.
-알림 서랍은 알림 영역 내 아무 곳이나 터치하면 열립니다.</p>
+알림 영역 내 아무 곳이나 터치하면 알림 서랍이 열립니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
