--- a/style/touch-feedback.html
+++ b/style/touch-feedback.html
@@ -6,10 +6,10 @@ title: 터치 피드백
   <div class="layout-content-col span-7">
 
 <p>터치에 응답하기 위해, 제스쳐 동작에 따른 결과를 보강하기 위해,
-그리고 어떤 액션이 사용 가능하고 불가능한지 알 수 있도록
-컬러와 빛을 사용하세요.</p>
+그리고 어떤 액션을 사용할 수 있고 사용할 수 없는지 알 수 있도록
+색상과 빛을 사용하세요.</p>
 <p>앱에서 동작하는 영역을 사용자가 터치했을 때는 언제나 시각적 응답을 제공하세요.
-이렇게 하는 것은 사용자가 어떤 객체가 터치되었는지 그리고 앱이 "사용자에게 주의를 기울이고 있음(listening)"을
+이렇게 하는 것은 사용자가 자신이 어떤 객체를 터치했는지 그리고 앱이 "사용자에게 주의를 기울이고 있다는 것(listening)"을
 알 수 있도록 해줍니다.</p>
 
   </div>
@@ -40,8 +40,8 @@ title: 터치 피드백
 
 <h4>커뮤니케이션</h4>
 <p>객체가 어떤 복잡한 제스쳐에 반응하도록 한다면 사용자가 작업 결과가 어떠할지 이해하게 도울 수 있습니다.
-예를 들어, 최근 사용 앱에서 썸네일을 좌나 우로 스와이프하기 시작하면, 썸네일은 서서히 희미해집니다.
-이것으로 사용자는 스와이프를 하면 아이템이 제거될 것임을 이해하게 됩니다.</p>
+예를 들어 최근 앱에서 썸네일을 좌나 우로 스와이프하기 시작하면 썸네일이 서서히 희미해집니다.
+이것으로 사용자는 스와이프를 하면 아이템이 제거될 것 임을 이해하게 됩니다.</p>
 
   </div>
   <div class="layout-content-col span-9">
@@ -60,14 +60,14 @@ title: 터치 피드백
 
 <div class="vspace size-3">&#160;</div>
 
-<h4>경계</h4>
-<p>사용자가 스크롤 가능한 영역의 더 위 혹은 아래 한계 이상으로 스크롤하려 할 때,
+<h4>경계(Boundaries)</h4>
+<p>사용자가 스크롤 가능한 영역의 더 위 혹은 아래 한계 이상으로 스크롤하려 할 때
 시각 신호로 경계라는 것을 전달해 줄 수 있습니다.
-예를 들어 사용자가 첫번째 홈 화면 패널에서 더 끝으로 이동하려고 하는 경우라면
-화면 상의 컨텐트는 오른쪽으로 기울어짐으로 이 방향으로 더 이상 이동할 수 없음을 보여줍니다.
+예를 들어 사용자가 첫번째 홈 화면 패널에서 더 끝으로 이동하려 한다면
+화면 상의 컨텐트는 오른쪽으로 기울어져서 이 방향으로 더 이상 이동할 수 없음을 보여줍니다.
 (리스트나 그리드 리스트와 같은) 안드로이드의 대부분의 스크롤 가능한 UI 위젯들은
-이미 경계 피드백을 내장하고 있습니다.
-만약 커스텀 위젯을 만들고 있다면, 경계 피드백을 잊지 말고 앱에서 해당 기능을 제공하도록 해주세요.</p>
+이미 이러한 경계 피드백을 내장하고 있습니다.
+만약 커스텀 위젯을 만들고 있다면, 경계 피드백을 잊지 말고 앱에서 해당 기능을 제공해주세요.</p>
 
   </div>
 </div>
