--- a/building-blocks/buttons.html
+++ b/building-blocks/buttons.html
@@ -40,7 +40,7 @@ title: 버튼
 
 
 <p>무테 버튼은 테두리 및 배경이 없다는 점을 제외하고는 기본 버튼과 흡사합니다.
-따라서 아이콘과 텍스트과 함께 무테 버튼을 사용할 수 있습니다.
+따라서 무테 버튼도 아이콘과 텍스트와 함께 사용할 수 있습니다.
 무테 버튼은 시각적으로 기본 버튼보다 더 가벼워 보이므로 다른 내용과 함께 멋지게 통합할 수 있습니다.</p>
 
 
