번역과 오타를 다듬습니다.

--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -54,7 +54,7 @@ title: 창조적 비전
 쓰기 편한 앱을 만드는 것만으로는 충분하지 않습니다.
 안드로이드 앱은 사람들이 새로운 것을 시도하고 독창적인 새 방식으로 앱을 사용할 기회를 제공합니다.
 안드로이드는 사용자가 멀티태스킹, 알림, 앱 간 공유 등을 이용해 여러 앱을 조합하여 새로운 작업 흐름을 만들 수 있도록 합니다.
-그러면서도 여러분의 앱은 개인에 딱 맞게 구성되어 사용자에게 새로운 기술을 명확하고 우아하게 제공하어야 합니다.
+그러면서도 여러분의 앱은 개인에 딱 맞게 구성되어 사용자에게 새로운 기술을 명확하고 우아하게 제공하여야 합니다.
 </p>
 
   </div>
