--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -14,7 +14,7 @@ title: 디자인 원칙
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>멋진 모습으로 놀래켜주세요</h4>
+<h4>놀라운 방법으로 기쁨을 주세요</h4>
 <p>
 아름다운 배경, 잘 배치된 애니메이션, 상황에 딱 맞는 효과음을 넣으면 사용하기 즐거워집니다.
 작은 효과를 추가하는 것만으로도 사람들은 쉽고 편리하며 강력한 기능이 있다고 느낍니다.
