--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -2,10 +2,10 @@
 layout: default
 title: UI 개요
 ---
-<p>앱을 만들면 그 위에 안드로이드의 시스템 UI의 프레임워크가 제공됩니다.
-시스템 UI의 주요 부분으로 홈 스크린 경험, 글로벌 디바이스 네비게이션, 그리고 알림이 있습니다.</p>
+<p>안드로이드 시스템 UI는 여러분의 앱 위에 프레임워크를 제공합니다.
+시스템 UI의 주요 부분으로 홈 화면 경험, 전역적인 기기 탐색, 그리고 알림이 있습니다.</p>
 
-<p>여러분의 앱은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용 면에서 중요한 역할을 할 것입니다.
+<p>여러분의 앱은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용성을 제공하는 면에서 중요한 역할을 할 것입니다.
 우리는 이 장 끝 부분에서 앱이 이러한 목표를 달성하기 위한 주요 사항들을 소개합니다.</p>
 
 <p>먼저 안드로이드 사용자 인터페이스의 주요 측면에 대해 간단히 개요를 훑어보도록 하겠습니다.</p>
@@ -23,7 +23,7 @@ title: UI 개요
     <img src="../media/ui_overview_home_screen.png"><h4>홈 화면</h4>
 <p>홈은 사용자 정의가 가능한 앱 바로가기, 폴더, 위젯을 올려둘 수 있는 공간입니다.
 홈 화면에서 좌우로 스와이프하여 다른 홈 화면 패널을 살펴볼 수 있습니다.</p>
-<p>즐겨찾기 트레이는 항상 아랫쪽에 표시되어, 현재의 패널과 관계 없이 
+<p>즐겨찾기 트레이는 항상 아랫쪽에 표시되어 현재의 패널과 관계 없이 
 가장 중요한 바로 가기와 폴더를 고정해 표시해줍니다.</p>
 <p>즐겨찾기 트레이 중앙에 위치한 모든 앱 버튼을 터치해 전체 앱과 위젯 목록에 접근할 수 있습니다.</p>
 
@@ -42,7 +42,7 @@ title: UI 개요
 최근 앱은 진행중인 작업 사이의 명확한 탐색 경로도 제공합니다.</p>
 <p>네비게이션 바 오른쪽에 있는 최근 앱 버튼은 사용자가 최근에 작업한 순으로 앱 목록을 표시합니다.
 이 목록은 가장 최근에 작업한 앱을 아래부터 역순으로 표시합니다.</p>
-<p>앱을 터치해 해당 앱으로 전환할 수 있습니다. 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
+<p>앱을 터치해 해당 앱으로 전환할 수 있으며 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
 
   </div>
 </div>
@@ -51,7 +51,7 @@ title: UI 개요
 <h2 id="system-bars">시스템 바</h2>
 
 
-<p>시스템 바는 알림 표시, 디바이스 상태 안내, 디바이스 네비게이션을 위한 전용 영역입니다.
+<p>시스템 바는 알림 표시, 기기 상태 안내, 기기 탐색을 위한 전용 영역입니다.
 일반적으로 시스템 바는 앱과 동시에 보입니다.
 영화나 이미지와 같이 몰입형 컨텐트를 제공하는 앱인 경우
 방해받지 않고 전체 화면으로 컨텐트를 즐길 수 있도록 임시로 시스템 바를 숨길 수도 있습니다.</p>
@@ -117,7 +117,7 @@ title: UI 개요
 </div>
   <div class="layout-content-col span-6 with-callouts">
 
-<p>전형적인 안드로이드 앱은 액션바와 앱 켠텐트 영역으로 이루어져 있습니다.</p>
+<p>전형적인 안드로이드 앱은 액션 바와 앱 컨텐트 영역으로 이루어져 있습니다.</p>
 <ol>
 <li>
 <h4>메인 액션 바</h4>
