--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -21,7 +21,7 @@ title: UI 개요
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_home_screen.png"><h4>홈 화면</h4>
-<p>홈은 사용자 정의가 가능한 앱 바로가기, 폴더, 위젯을 올려둘 수 있는 공간입니다.
+<p>홈은 앱 바로가기, 폴더, 위젯을 직접 배치하는 공간입니다.
 홈 화면에서 좌우로 스와이프하여 다른 홈 화면 패널을 살펴볼 수 있습니다.</p>
 <p>즐겨찾기 트레이는 항상 아랫쪽에 표시되어 현재의 패널과 관계 없이 
 가장 중요한 바로 가기와 폴더를 고정해 표시해줍니다.</p>
@@ -52,8 +52,8 @@ title: UI 개요
 
 
 <p>시스템 바는 알림 표시, 기기 상태 안내, 기기 탐색을 위한 전용 영역입니다.
-일반적으로 시스템 바는 앱과 동시에 보입니다.
-영화나 이미지와 같이 몰입형 컨텐트를 제공하는 앱인 경우
+일반적으로 시스템 바는 앱과 동시에 표시됩니다.
+영화나 이미지처럼 몰입형 컨텐트를 제공하는 앱의 경우
 방해받지 않고 전체 화면으로 컨텐트를 즐길 수 있도록 임시로 시스템 바를 숨길 수도 있습니다.</p>
 
 
@@ -63,13 +63,13 @@ title: UI 개요
 <ol>
 <li>
 <h4>상태 표시줄</h4>
-<p>왼쪽에는 확인이 필요한 알림을 표시하고 오른쪽에는 시간, 배터리 레벨, 신호 강도 상태 등을 표시합니다.
+<p>왼쪽에는 사용자 확인이 필요한 알림을 표시하고 오른쪽에는 시간, 배터리 레벨, 신호 강도 상태 등을 표시합니다.
 상태 표시줄에서 아래로 스와이프해 세부 알림 사항을 볼 수 있습니다.</p>
 </li>
 <li>
 <h4>네비게이션 바</h4>
-<p>안드로이드 4.0에서 폰 용으로 추가된 네비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 나타납니다.
-이전, 홈, 최근 앱이 배치되어 있으며 안드로이드 2.3 이하의 버전용으로 만들어진 앱의 메뉴 컨트롤도 표시됩니다.</p>
+<p>안드로이드 4.0 폰에 추가된 네비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 나타납니다.
+이전, 홈, 최근 앱이 배치되어 있으며 안드로이드 2.3 이하 버전용으로 만들어진 앱의 메뉴 컨트롤도 표시됩니다.</p>
 </li>
 <li>
 <h4>결합 바(Combined Bar)</h4>
