--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -23,7 +23,7 @@ title: 제스쳐
 
     <img src="../media/gesture_longtouch.png"><h4>롱 프레스</h4>
 <p>데이터 선택 모드로 들어갑니다. 하나 이상의 항목을 선택할 수 있고
-    문맥 액션 바를 통해 데이터를 조작할 수 있습니다. 문맥 메뉴를
+    컨텍스트 액션 바를 통해 데이터를 조작할 수 있습니다. 컨텍스트 메뉴를
     보여주기 위한 롱 프레스는 안됩니다.</p>
 
 <ul>
