--- a/patterns/navigation.html
+++ b/patterns/navigation.html
@@ -38,7 +38,7 @@ title: 이전(Back) 및 상위(Up) 탐색
 
 <ul>
 <li>이전 키는 떠 있는 윈도우(대화상자, 팝업)를 닫습니다.</li>
-<li>이전 키는 문맥 액션 바와 선택된 항목 표시를 지웁니다.</li>
+<li>이전 키는 컨텍스트 액션 바와 선택된 항목 표시를 지웁니다.</li>
 <li>이전 키는 온스크린 키보드(IME)를 감춥니다.</li>
 </ul>
 <h2 id="within-app">앱 내 탐색</h2>
