--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -65,9 +65,9 @@ title: 안드로이드 4.0의 새로운 점
   <div class="layout-content-col span-7">
 
 <h4>선택</h4>
-<p>길게 누르는 동작은 이전에는 객체에 대한 문맥 메뉴를
+<p>길게 누르는 동작은 이전에는 객체에 대한 컨텍스트 메뉴를
     보여줬습니다. 이제는 길게 눌러 데이터를 선택할 수
-    있습니다. 데이터를 선택할 때 문맥 액션 바(contextual action bar)에서 액션을 조작할 수 있습니다.</p>
+    있습니다. 데이터를 선택할 때 컨텍스트 액션 바(contextual action bar)에서 액션을 조작할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
