--- a/patterns/notifications.html
+++ b/patterns/notifications.html
@@ -49,7 +49,7 @@ title: 알림(Notifications)
 </li>
 <li>
 <p>관련된 새 정보가 현재 화면에 바로 나타나는 경우라면 알림을 만들지 마세요. 대신 현재 애플리케이션 UI에
-문맥 내에 새로운 정보가 있음을 사용자에게 바로 알려주세요.
+컨텍스트 내에 새로운 정보가 있음을 사용자에게 바로 알려주세요.
 예를 들어 대화 애플리케이션은 사용자가 다른 사용자와 대화 중일 때는 시스템 알림을 생성하지 않아야 합니다.</p>
 </li>
 <li>
