--- a/building-blocks/grid-lists.html
+++ b/building-blocks/grid-lists.html
@@ -59,7 +59,7 @@ title: 그리드 리스트
 <h2 id="with-labels">레이블이 있는 그리드 리스트</h2>
 
 
-<p>그리드 리스트 항목에 대해 추가적인 문맥 정보를 표시하려면 레이블을 사용합니다.</p>
+<p>그리드 리스트 항목에 대해 추가적인 컨텍스트 정보를 표시하려면 레이블을 사용합니다.</p>
 
 
 
