--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -129,16 +129,16 @@ title: 액션 바
 </div>
 
 
-<h2 id="contextual">문맥 액션 바(Contextual Action Bars)</h2>
+<h2 id="contextual">컨텍스트 액션 바(Contextual Action Bars)</h2>
 
 
-<p><em>문맥 액션 바(CAB)</em>는 어떤 하위 작업을 수행하는 동안에만 임시로 애플리케이션 액션 바 위에 덮어 표시하는 액션 바입니다.
+<p><em>컨텍스트 액션 바(CAB)</em>는 어떤 하위 작업을 수행하는 동안에만 임시로 애플리케이션 액션 바 위에 덮어 표시하는 액션 바입니다.
   대부분 CAB는 데이터나 텍스트를 선택 시의 작업에 사용됩니다.</p>
 
 
 <img src="../media/action_bar_cab.png">
 <div class="figure-caption">
-  브라우저와 Gmail에 표시 중인 문맥 액션 바
+  브라우저와 Gmail에 표시 중인 컨텍스트 액션 바
 </div>
 
 
@@ -369,6 +369,6 @@ Typical(주기, 중요, 전형)">FIT</acronym> 규칙을 사용하세요. 만약
 
 <h4>계속 표시되어야 할 어떤 다른 중요한 것이 있을까요?</h4>
 
-<p>때때로 애플리케이션이 문맥 정보를 계속 표시하는 것이 중요할 수도 있습니다.
+<p>때때로 애플리케이션이 컨텍스트 정보를 계속 표시하는 것이 중요할 수도 있습니다.
 이를테면 받은 메시지 함에서 읽지 않은 메시지 수라든가 음악 플레이어에서 현재 재생중인 곡에 대한 표시 등이 있습니다.
 잘 계획해 어떤 중요한 정보를 표시할 것인지를 결정해 그에 맞춰 액션 바를 조직하세요.</p>
