--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -2,7 +2,7 @@
 layout: default
 title: 순수한 안드로이드
 ---
-<p>대부분의 개발자는 앱을 여러 플랫폼에 배포하고 싶어합니다. 안드로이드 앱을 준비할 때, 서로 다른 플랫폼은 서로 다른 규칙과 관례를 따른다는 것을 고려하십시오. 어느 한 플랫폼에서 완벽히 들어맞는 디자인이라도 다른 플랫폼의 문맥 상에서는 모양새와 느낌이 잘 맞지 않을 수 있습니다. "한번만 디자인하고, 어디나 배포하는" 방식이 당장은 시간을 절약해 줄지도 모르지만, 일관성이 떨어져 사용자가 어색하게 느끼는 앱이 되는 현실적인 문제를 감수하는 것입니다. 아래의 지침을 고려하여 흔히 빠질 수 있는 함정과 실수를 피해 가세요.</p>
+<p>대부분의 개발자는 앱을 여러 플랫폼에 배포하고 싶어합니다. 안드로이드 앱을 준비할 때, 서로 다른 플랫폼은 서로 다른 규칙과 관례를 따른다는 것을 고려하십시오. 어느 한 플랫폼에서 완벽히 들어맞는 디자인이라도 다른 플랫폼의 컨텍스트 상에서는 모양새와 느낌이 잘 맞지 않을 수 있습니다. "한번만 디자인하고, 어디나 배포하는" 방식이 당장은 시간을 절약해 줄지도 모르지만, 일관성이 떨어져 사용자가 어색하게 느끼는 앱이 되는 현실적인 문제를 감수하는 것입니다. 아래의 지침을 고려하여 흔히 빠질 수 있는 함정과 실수를 피해 가세요.</p>
 
 
 <div class="vspace size-1">&#160;</div>
