--- a/patterns/swipe-views.html
+++ b/patterns/swipe-views.html
@@ -69,7 +69,7 @@ title: 뷰 스와이프
 </li>
 <li>
 <p>디테일 뷰에서 사용자가 현재 표시되는 항목의 상대 목록 위치가 어딘지 알 수 있도록
- 문맥 정보를 추가하는 것도 검토해보세요.</p>
+ 컨텍스트 정보를 추가하는 것도 검토해보세요.</p>
 </li>
 </ul>
 </div>
