#67: s/컨텐트/컨텐츠/g

--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -53,8 +53,8 @@ title: UI 개요
 
 <p>시스템 바는 알림 표시, 기기 상태 안내, 기기 탐색을 위한 전용 영역입니다.
 일반적으로 시스템 바는 앱과 동시에 표시됩니다.
-영화나 이미지처럼 몰입형 컨텐트를 제공하는 앱의 경우
-방해받지 않고 전체 화면으로 컨텐트를 즐길 수 있도록 임시로 시스템 바를 숨길 수도 있습니다.</p>
+영화나 이미지처럼 몰입형 컨텐츠를 제공하는 앱의 경우
+방해받지 않고 전체 화면으로 컨텐츠를 즐길 수 있도록 임시로 시스템 바를 숨길 수도 있습니다.</p>
 
 
 <img src="../media/ui_overview_system_ui.png">
@@ -117,7 +117,7 @@ title: UI 개요
 </div>
   <div class="layout-content-col span-6 with-callouts">
 
-<p>전형적인 안드로이드 앱은 액션 바와 앱 컨텐트 영역으로 이루어져 있습니다.</p>
+<p>전형적인 안드로이드 앱은 액션 바와 앱 컨텐츠 영역으로 이루어져 있습니다.</p>
 <ol>
 <li>
 <h4>메인 액션 바</h4>
@@ -131,8 +131,8 @@ title: UI 개요
 뷰는 일반적으로 앱의 데이터를 다양하게 배치하거나 다양한 기능을 제공하도록 구성합니다.</p>
 </li>
 <li>
-<h4>컨텐트 영역</h4>
-<p>이 공간은 앱의 컨텐트가 표시되는 공간입니다.</p>
+<h4>컨텐츠 영역</h4>
+<p>이 공간은 앱의 컨텐츠가 표시되는 공간입니다.</p>
 </li>
 <li>
 <h4>분할 액션 바</h4>
