--- a/style/devices-displays.html
+++ b/style/devices-displays.html
@@ -22,7 +22,7 @@ title: 기기 및 디스플레이
 
 <h4>레이아웃을 최적화하세요</h4>
 <p>큰 기기에서는 더 큰 화면의 장점을 활용하도록 하세요. 다양한 뷰를 조합한 복합 뷰를 만들어
-더 많은 컨텐트를 표시하고 편리하게 탐색할 수 있도록 해주세요.</p>
+더 많은 컨텐츠를 표시하고 편리하게 탐색할 수 있도록 해주세요.</p>
 
   </div>
   <div class="layout-content-col span-4">
