--- a/style/touch-feedback.html
+++ b/style/touch-feedback.html
@@ -64,7 +64,7 @@ title: 터치 피드백
 <p>사용자가 스크롤 가능한 영역의 더 위 혹은 아래 한계 이상으로 스크롤하려 할 때
 시각 신호로 경계라는 것을 전달해 줄 수 있습니다.
 예를 들어 사용자가 첫번째 홈 화면 패널에서 더 끝으로 이동하려 한다면
-화면 상의 컨텐트는 오른쪽으로 기울어져서 이 방향으로 더 이상 이동할 수 없음을 보여줍니다.
+화면 상의 컨텐츠는 오른쪽으로 기울어져서 이 방향으로 더 이상 이동할 수 없음을 보여줍니다.
 (리스트나 그리드 리스트와 같은) 안드로이드의 대부분의 스크롤 가능한 UI 위젯들은
 이미 이러한 경계 피드백을 내장하고 있습니다.
 만약 커스텀 위젯을 만들고 있다면, 경계 피드백을 잊지 말고 앱에서 해당 기능을 제공해주세요.</p>
