--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -96,7 +96,7 @@ title: 액션 바
   어떻게 다양한 디바이스의 화면 크기와 화면 회전에 맞출 것인가 하는 점입니다.</p>
 
 <p><em>분할 액션 바</em>를 사용해 이런 변경에 대응할 수 있는데,
-  분할 액션 바는 메인 액션 바 밑 혹은 화면 하단 등에 배치하는 다중 바로 액션 바 컨텐트를 분배할 수 있도록 해줍니다.</p>
+  분할 액션 바는 메인 액션 바 밑 혹은 화면 하단 등에 배치하는 다중 바로 액션 바 컨텐츠를 분배할 수 있도록 해줍니다.</p>
 
 
 <img src="../media/action_bar_pattern_rotation.png">
@@ -111,7 +111,7 @@ title: 액션 바
 <div class="layout-content-row">
   <div class="layout-content-col span-8 with-callouts">
 
-<p>여러 액션 바로 컨텐트를 분리할 때, 일반적으로 액션 바 컨텐트를 배치할 수 있는 세 곳의 위치가 있습니다:</p>
+<p>여러 액션 바로 컨텐츠를 분리할 때, 일반적으로 액션 바 컨텐츠를 배치할 수 있는 세 곳의 위치가 있습니다:</p>
 <ol>
 <li><strong>메인 액션 바</strong></li>
 <li><strong>상단 바</strong></li>
@@ -152,7 +152,7 @@ title: 액션 바
 <li>네비게이션 바의 이전 버튼이나 CAB의 체크마크 버튼으로 CAB를 없앨 수 있습니다. 이 작업은 모든 선택 표시와 함께 CAB를 제거합니다.</li>
 </ul>
 <p>애플리케이션이 사용자가 데이터를 길게 눌러 선택하는 동작을 지원한다면 언제나 CAB를 사용해주세요.
- 여러분은 사용자가 수행하도록 하고 싶은 작업을 추가하기 위해 CAB의 액션 컨텐트를 조정할 수도 있습니다.</p>
+ 여러분은 사용자가 수행하도록 하고 싶은 작업을 추가하기 위해 CAB의 액션 컨텐츠를 조정할 수도 있습니다.</p>
 
 <p>더 자세한 정보는, <a href="selection.html">선택</a> 패턴을 참조해주세요.</p>
 
@@ -178,7 +178,7 @@ title: 액션 바
 스크롤 탭은 많은 탭을 뷰로 표시하기 위해 수평 방향으로 스스로 스크롤 될 수 있습니다.</p>
 <p>많은 뷰가 필요하거나 애플리케이션에서 뷰를 동적으로 추가하기 때문에 뷰가 얼마나 많이 필요한지 확실하지 않다면
 (예를 들어, 메시징 애플리케이션에서 사용자가 각 대화를 오갈 수 있습니다) 스크롤 탭을 사용하세요.
-스크롤 탭은 언제나 사용자가 탭 위에서 뿐 아니라 컨텐트 영역 내에서도 좌나 우로 스와이프해
+스크롤 탭은 언제나 사용자가 탭 위에서 뿐 아니라 컨텐츠 영역 내에서도 좌나 우로 스와이프해
 뷰 간을 탐색할 수 있게 해야 합니다.</p>
 
   </div>
