--- a/patterns/navigation.html
+++ b/patterns/navigation.html
@@ -77,7 +77,7 @@ title: 이전(Back) 및 상위(Up) 탐색
 <p>그러나 주목할만한 예외가 "관련된" 상세 뷰를 열람할 때와 같은 경우&#8212;예를 들어
 Google Play에서 같은 개발자의 다른 앱들을 열람하는 경우, 혹은 같은 아티스트의 다른 앨범들을 열람하는 경우&#8212;에
 발생할 수 있습니다.
-이와 같은 경우에는 각 링크를 따라갈 때 기록을 남겨둠으로, 이전 버튼을 누르면 본 적이 있는 각 연관된 컨텐트로
+이와 같은 경우에는 각 링크를 따라갈 때 기록을 남겨둠으로, 이전 버튼을 누르면 본 적이 있는 각 연관된 컨텐츠로
 이동할 수 있습니다.
 상위 버튼은 이전과 마찬가지로 이러한 관련 화면들은 무시하고 가장 최근에 봤던 컨테이너 화면으로 이동해야 합니다.</p>
 
