--- a/patterns/swipe-views.html
+++ b/patterns/swipe-views.html
@@ -11,7 +11,7 @@ title: 뷰 스와이프
 <h2 id="detail-views">디테일 뷰 간에 스와이프하기</h2>
 
 
-<p>앱 데이터는 보통 마스터(master)/디테일(detail) 관계로 구성됩니다. 사용자는 관련 데이터 항목들 이를테면 이미지, 채팅, 또는 이메일 목록 등이 나타나면 그 중 하나를 선택해 별도의 화면에서 디테일 컨텐트를 보게 됩니다.</p>
+<p>앱 데이터는 보통 마스터(master)/디테일(detail) 관계로 구성됩니다. 사용자는 관련 데이터 항목들 이를테면 이미지, 채팅, 또는 이메일 목록 등이 나타나면 그 중 하나를 선택해 별도의 화면에서 디테일 컨텐츠를 보게 됩니다.</p>
 
 
 <img src="../media/swipe_views.png">
