--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -3,10 +3,10 @@ layout: default
 title: UI 개요
 ---
 <p>안드로이드 시스템 UI는 여러분의 앱 위에 프레임워크를 제공합니다.
-시스템 UI의 주요 부분으로 홈 화면 경험, 전역적인 기기 탐색, 그리고 알림이 있습니다.</p>
+시스템 UI의 주요 부분으로 홈 화면 경험, 전역적인 기기 탐색, 알림이 있습니다.</p>
 
-<p>여러분의 앱은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용성을 제공하는 면에서 중요한 역할을 할 것입니다.
-우리는 이 장 끝 부분에서 앱이 이러한 목표를 달성하기 위한 주요 사항들을 소개합니다.</p>
+<p>여러분의 앱은 안드로이드 경험 전반에서 일관성과 즐거운 사용성을 제공하는 중요한 역할을 할 것입니다.
+우리는 이 장 끝에서 앱이 이러한 목표를 달성하기 위한 주요 사항을 소개합니다.</p>
 
 <p>먼저 안드로이드 사용자 인터페이스의 주요 측면에 대해 간단히 개요를 훑어보도록 하겠습니다.</p>
 
@@ -23,15 +23,14 @@ title: UI 개요
     <img src="../media/ui_overview_home_screen.png"><h4>홈 화면</h4>
 <p>홈은 앱 바로가기, 폴더, 위젯을 직접 배치하는 공간입니다.
 홈 화면에서 좌우로 스와이프하여 다른 홈 화면 패널을 살펴볼 수 있습니다.</p>
-<p>즐겨찾기 트레이는 항상 아랫쪽에 표시되어 현재의 패널과 관계 없이 
-가장 중요한 바로 가기와 폴더를 고정해 표시해줍니다.</p>
-<p>즐겨찾기 트레이 중앙에 위치한 모든 앱 버튼을 터치해 전체 앱과 위젯 목록에 접근할 수 있습니다.</p>
+<p>아래에 있는 즐겨찾기 트레이는 현재의 패널과 관계 없이 가장 중요한 바로 가기와 폴더를 항상 보여줍니다.</p>
+<p>즐겨찾기 트레이 중앙의 모든 앱 버튼을 터치해 전체 앱과 위젯 목록을 볼 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_all_apps.png"><h4>모든 앱 화면</h4>
-<p>모든 앱 화면에서 디바이스에 설치되어 있는 모든 앱과 위젯 전체 항목을 열람할 수 있습니다.</p>
+<p>모든 앱 화면에서 디바이스에 설치되어 있는 모든 앱과 위젯을 볼 수 있습니다.</p>
 <p>사용자는 모든 앱 화면에서 앱이나 위젯 아이콘을 끌어 홈 화면 빈 곳 어디에나 배치할 수 있습니다.</p>
 
   </div>
@@ -40,9 +39,9 @@ title: UI 개요
     <img src="../media/ui_overview_recents.png"><h4>최근 앱(Recents) 화면</h4>
 <p>최근 앱은 최근에 사용한 앱 사이를 이동하는 효율적인 방법을 제공합니다.
 최근 앱은 진행중인 작업 사이의 명확한 탐색 경로도 제공합니다.</p>
-<p>네비게이션 바 오른쪽에 있는 최근 앱 버튼은 사용자가 최근에 작업한 순으로 앱 목록을 표시합니다.
-이 목록은 가장 최근에 작업한 앱을 아래부터 역순으로 표시합니다.</p>
-<p>앱을 터치해 해당 앱으로 전환할 수 있으며 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
+<p>네비게이션 바 오른쪽의 최근 앱 버튼은 사용자가 최근에 사용한 앱 목록을 표시합니다.
+이 목록은 가장 최근에 사용한 앱을 아래부터 역순으로 표시합니다.</p>
+<p>앱을 터치해 해당 앱으로 전환하거나 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
 
   </div>
 </div>
@@ -52,8 +51,8 @@ title: UI 개요
 
 
 <p>시스템 바는 알림 표시, 기기 상태 안내, 기기 탐색을 위한 전용 영역입니다.
-일반적으로 시스템 바는 앱과 동시에 표시됩니다.
-영화나 이미지처럼 몰입형 컨텐츠를 제공하는 앱의 경우
+일반적으로 시스템 바는 화면에 앱과 함께 보입니다.
+영화나 이미지처럼 몰입형 컨텐츠를 제공하는 앱이라면
 방해받지 않고 전체 화면으로 컨텐츠를 즐길 수 있도록 임시로 시스템 바를 숨길 수도 있습니다.</p>
 
 
@@ -69,11 +68,11 @@ title: UI 개요
 <li>
 <h4>네비게이션 바</h4>
 <p>안드로이드 4.0 폰에 추가된 네비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 나타납니다.
-이전, 홈, 최근 앱이 배치되어 있으며 안드로이드 2.3 이하 버전용으로 만들어진 앱의 메뉴 컨트롤도 표시됩니다.</p>
+이전, 홈, 최근 앱 컨트롤이 놓여있고 안드로이드 2.3 이하 버전용으로 만들어진 앱은 메뉴 컨트롤도 보여줍니다.</p>
 </li>
 <li>
 <h4>결합 바(Combined Bar)</h4>
-<p>타블렛 형태의 기기에서는 화면 아래에 상태 표시줄과 네비게이션 바가 결합되어 하나의 바로 배치되어 있습니다.</p>
+<p>타블렛 형태의 기기에서는 상태 표시줄과 네비게이션 바를 하나의 바로 합쳐 화면 아래에 둡니다.</p>
 </li>
 </ol>
 </div>
@@ -85,7 +84,7 @@ title: UI 개요
 <p>알림은 사용자가 상태 표시줄을 통해 언제든지 접근할 수 있는 짧은 메시지입니다.
 알림은 업데이트, 일정 알림이나 중요하지만 사용자를 방해할 정도는 아닌 정보를 제공합니다.
 상태 표시줄을 아래로 스와이프해 알림 서랍(notifications drawer)을 엽니다.
-알림을 터치하면 해당 알림과 연관되어 있는 앱을 열게 됩니다.
+알림을 터치하면 해당 알림과 연관된 앱을 열게 됩니다.
 <a href="../patterns/notifications.html">알림에 대한 세부 사항</a></p>
 
 
@@ -136,8 +135,8 @@ title: UI 개요
 </li>
 <li>
 <h4>분할 액션 바</h4>
-<p>분할 액션 바는 메인 액션바 아래나 화면 하단에 표시되는 추가 바입니다.
-이 예제의 분할 액션 바에는 메인 액션 바에 들어가지 못한 중요한 액션들이 옮겨져 있습니다.</p>
+<p>분할 액션 바는 메인 액션바 아래나 화면 하단에 표시되는 추가 바로 액션을 나눌 수 있게 해줍니다.
+이 예제의 분할 액션 바에는 메인 액션 바에 들어가지 못한 중요한 액션을 옮겼습니다.</p>
 </li>
 </ol>
 </div>
