style/devices-displays.html 번역 다듬음

--- a/style/devices-displays.html
+++ b/style/devices-displays.html
@@ -2,9 +2,8 @@
 layout: default
 title: 기기 및 디스플레이
 ---
-<p>안드로이드는 다양한 화면 크기와 형태를 지닌 수많은 폰과 타블렛, 그리고 그 외의 기기에 탑재되고 있습니다.
-안드로이드의 유연한 레이아웃 시스템의 장점을 활용함으로 큰 타블렛에서 작은 폰에 이르기까지
-우아하게 커지고 줄어드는 앱을 만들 수 있을 것입니다.</p>
+<p>안드로이드는 다양한 화면 크기와 형태의 수많은 폰과 타블렛과 그 밖의 기기에 탑재되고 있습니다.
+안드로이드의 유연한 레이아웃 시스템을 활용하여 큰 타블렛이든 작은 폰이든 우아하게 맞는 앱을 만들 수 있습니다.</p>
 
 
 <img src="../media/devices_displays_main.png">
@@ -15,14 +14,14 @@ title: 기기 및 디스플레이
   <div class="layout-content-col span-4">
 
 <h4>유연해지세요</h4>
-<p>레이아웃을 늘리고 줄여 다양한 높이와 너비를 수용하세요.</p>
+<p>다양한 높이와 너비를 지원하기 위해 레이아웃을 늘리고 줄이세요.</p>
 
   </div>
   <div class="layout-content-col span-5">
 
 <h4>레이아웃을 최적화하세요</h4>
-<p>큰 기기에서는 더 큰 화면의 장점을 활용하도록 하세요. 다양한 뷰를 조합한 복합 뷰를 만들어
-더 많은 컨텐츠를 표시하고 편리하게 탐색할 수 있도록 해주세요.</p>
+<p>큰 기기에서는 더 큰 화면의 장점을 활용하도록 하세요. 다양한 뷰를 조합해 복합 뷰를 만들어
+더 많은 컨텐츠를 담고 탐색을 편리하게 해주세요.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -45,7 +44,7 @@ title: 기기 및 디스플레이
 <p>그럼 다양한 화면 크기에 맞는 디자인을 하기 위해 어디서부터 시작해야 할까요?
 한가지 방법은 기본 표준(중간 크기, <acronym title="Medium density(중간
 해상도, 160 dpi)">MDPI</acronym>)에서 작업한 후
-다른 크기로 크기를 키우거나 줄이는 것입니다. 또다른 방법은 가장 큰 스크린의 기기에서 시작해
+크기를 키우거나 줄이는 것입니다. 또다른 방법은 가장 큰 스크린의 기기에서 시작해
 더 작은 화면으로 크기를 절충해 줄여나가는 것입니다.</p>
 
 <p>이 주제에 대한 더 자세한 정보를 보시려면 <a href="http://developer.android.com/guide/practices/screens_support.html">다양한 화면 지원하기</a> 페이지를 방문해주세요.</p>
