--- a/style/themes.html
+++ b/style/themes.html
@@ -21,19 +21,17 @@ title: 테마
   <div class="layout-content-col span-7">
 
 <p>테마는 앱이나 액티비티에 일관된 스타일을 적용할 수 있도록 안드로이드가 제공하는 기능입니다.
-스타일은 화면을 구성하는 각 요소의 색깔, 높이, 여백, 폰트 크기와 같은, 외관에 관한 속성들을 지정 할 수 있습니다.
-플랫폼 상의 모든 앱이 플랫폼과 일관적이고 단결된 모습으로 보일 수 있도록, 안드로이드는 아이스크림 샌드위치
-이상 버전에서 개발중인 앱이라면 다음 세개의 테마를 제공합니다:</p>
+스타일은 색깔, 높이, 여백, 폰트 크기 같은 사용자 인터페이스를 구성하는 각 요소의 외관 속성을 지정합니다.
+플랫폼의 모든 앱이 더 일관적으로 보이도록 돕기 위해 안드로이드는 아이스크림 샌드위치에서 개발하는 앱에 다음 세 가지 시스템 테마를 제공합니다.</p>
 <ul>
 <li>홀로 라이트</li>
 <li>홀로 다크</li>
 <li>다크 액션바가 있는 홀로 라이트</li>
 </ul>
-<p>이 테마들을 적용하는 것은 안드로이드의 일반적 외관에 딱 어울리는 앱을 개발하는 데 큰 도움이 될 겁니다.</p>
-<p>앱의 필요와 디자인 미학에 가장 적합한 시스템 테마를 선택하세요.
-좀 더 특화된, 자신만의 개성적인 외관의 앱을 개발하고자 할때도, 시스템 테마 중 하나를
-특화된 UI 개발의 시작점으로 삼는 것이 좋은 방법입니다.
-시스템 테마는 선택적으로 특정 부분만 원하는 대로 변경해서 사용할 수 있는 탄탄한 토대를 제공하기 때문입니다.</p>
+<p>이 테마를 적용하면 안드로이드의 일반적 외관에 딱 어울리는 앱을 개발하는 데 큰 도움이 됩니다.</p>
+<p>만드는 앱의 필요와 디자인 미학에 가장 어울리는 시스템 테마를 선택하세요.
+좀 더 개성있는 외관의 앱을 개발하고자 할 때도 시스템 테마 중 하나를 바탕으로 고쳐나가는 것은 좋은 방법입니다.
+시스템 테마는 원하는 부분만 선택적으로 변경해 새 스타일을 만들 수 있는 탄탄한 토대를 제공하기 때문입니다.</p>
 
   </div>
 </div>
