style/touch-feedback.html 번역을 다듬음
listening을 입력을 기다리는 것으로 번역

--- a/style/touch-feedback.html
+++ b/style/touch-feedback.html
@@ -5,12 +5,9 @@ title: 터치 피드백
 <div class="layout-content-row" style="margin-bottom: -100px">
   <div class="layout-content-col span-7">
 
-<p>터치에 응답하기 위해, 제스쳐 동작에 따른 결과를 보강하기 위해,
-그리고 어떤 액션을 사용할 수 있고 사용할 수 없는지 알 수 있도록
-색상과 빛을 사용하세요.</p>
-<p>앱에서 동작하는 영역을 사용자가 터치했을 때는 언제나 시각적 응답을 제공하세요.
-이렇게 하는 것은 사용자가 자신이 어떤 객체를 터치했는지 그리고 앱이 "사용자에게 주의를 기울이고 있다는 것(listening)"을
-알 수 있도록 해줍니다.</p>
+<p>색과 빛을 활용해 터치에 반응하고 제스처 결과를 강조하고 가능하거나 불가능한 액션을 표시하세요.</p>
+<p>사용자가 액션이 있는 영역을 터치했을 때는 언제나 시각적으로 반응하세요.
+사용자는 이 반응으로 자신이 어떤 객체를 터치했는지 그리고 앱이 "입력을 기다리는지(listening)" 알 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -28,7 +25,7 @@ title: 터치 피드백
 
 <img src="../media/touch_feedback_states.png">
 <div class="figure-caption">
-  대부분의 안드로이드 UI 요소는 터치 상태를 인지할 수 있도록 하는 이펙트를 비롯한 터치 피드백을 지니고 있습니다.
+  대부분의 안드로이드 UI 요소는 터치 상태를 알려주는 효과 등의 터치 피드백을 지니고 있습니다.
 </div>
 
 
@@ -39,9 +36,9 @@ title: 터치 피드백
   <div class="layout-content-col span-4">
 
 <h4>커뮤니케이션</h4>
-<p>객체가 어떤 복잡한 제스쳐에 반응하도록 한다면 사용자가 작업 결과가 어떠할지 이해하게 도울 수 있습니다.
-예를 들어 최근 앱에서 썸네일을 좌나 우로 스와이프하기 시작하면 썸네일이 서서히 희미해집니다.
-이것으로 사용자는 스와이프를 하면 아이템이 제거될 것 임을 이해하게 됩니다.</p>
+<p>객체가 더 복잡한 제스쳐에 반응한다면 사용자는 작업 결과를 더 쉽게 예상합니다.
+예를 들어 최근 앱에서 섬네일을 왼쪽이나 오른쪽로 스와이프하기 시작하면 섬네일도 희미해지기 시작합니다.
+사용자는 이 반응으로 스와이프를 하면 아이템이 사라진다고 예상합니다.</p>
 
   </div>
   <div class="layout-content-col span-9">
@@ -61,13 +58,13 @@ title: 터치 피드백
 <div class="vspace size-3">&#160;</div>
 
 <h4>경계(Boundaries)</h4>
-<p>사용자가 스크롤 가능한 영역의 더 위 혹은 아래 한계 이상으로 스크롤하려 할 때
-시각 신호로 경계라는 것을 전달해 줄 수 있습니다.
-예를 들어 사용자가 첫번째 홈 화면 패널에서 더 끝으로 이동하려 한다면
-화면 상의 컨텐츠는 오른쪽으로 기울어져서 이 방향으로 더 이상 이동할 수 없음을 보여줍니다.
-(리스트나 그리드 리스트와 같은) 안드로이드의 대부분의 스크롤 가능한 UI 위젯들은
-이미 이러한 경계 피드백을 내장하고 있습니다.
-만약 커스텀 위젯을 만들고 있다면, 경계 피드백을 잊지 말고 앱에서 해당 기능을 제공해주세요.</p>
+<p>사용자가 스크롤 가능한 영역의 위나 아래 경계 밖으로 스크롤하려 할 때
+시각 신호로 경계라는 것을 전달할 수 있습니다.
+예를 들어 사용자가 첫번째 홈 화면 패널에서 더 끝으로 스크롤하면
+화면의 컨텐츠는 오른쪽으로 기울어져 이 방향으로 더 이동할 수 없음을 보여줍니다.
+안드로이드의 대부분의 스크롤 가능한 UI 위젯은(리스트, 그리드 리스트 등)
+이미 경계 피드백을 내장하고 있습니다.
+만약 커스텀 위젯을 만들고 있다면, 경계 피드백을 잊지 말고 앱에서 제공해주세요.</p>
 
   </div>
 </div>
