두세글자 -> 두세 단어

--- a/style/writing.html
+++ b/style/writing.html
@@ -78,7 +78,7 @@ title: 문체
 </li>
 <li>
 <p><strong>가장 중요한 걸 맨 앞에 두세요.</strong>
-첫 두세글자만 봐도 가장 중요한 정보가 뭔지 최소한 감을 잡을 수 있어야 합니다.
+첫 두세 단어만 봐도 가장 중요한 정보가 뭔지 최소한 감을 잡을 수 있어야 합니다.
 그렇지 않으면 다시 하세요.
 </p>
 </li>
