--- a/style/metrics-grids.html
+++ b/style/metrics-grids.html
@@ -5,15 +5,15 @@ title: 길이 및 격자
 <p>
 기기들은 겉보기 크기만 다양한 것이 아니라, 화면 밀도(<acronym
 title="Dot per inch(인치 당 도트)">DPI</acronym>)도 다양합니다.
-여러가지 화면을 한번에 간단히 디자인하기 위해서는, 각 기기를 특정 크기와 밀도에 대해 몇 종류로 구분하는 것이 좋습니다.
-크기 기준의 경우 <em>전화기</em>(600<acronym
+여러 화면을 간단히 디자인하기 위해서는 각 기기를 크기와 밀도에 따라 몇 종류로 분류하는 것이 좋습니다.
+크기 기준은 <em>전화기</em>(600<acronym
 title="Density-independent pixel(밀도 독립 픽셀). 1dp는 160 dpi의 경우 1화소가 됩니다.">dp</acronym> 미만)와
 <em>태블릿</em>(600dp 이상)으로 나눌 수 있습니다.
-밀도 기준의 경우 <acronym title="Low density(저해상도, 120
+밀도 기준은 <acronym title="Low density(저해상도, 120
 dpi)">LDPI</acronym>, <acronym title="Midium density(중해상도, 160 dpi)">MDPI</acronym>,
 <acronym title="High density(고해상도, 240 dpi)">HDPI</acronym>,
 <acronym title="Extra-high density(초고해상도, 320 dpi)">XHDPI</acronym>으로 나뉩니다.
-앱 UI를 디자인할 때는 여러 크기 기준에 대해 다른 배치를 구상하고 밀도 기준에 대비해 여러 비트맵 그림을 준비하는 방식으로 UI를 최적화하세요.
+크기 기준에 따라 다른 배치를 구상하여 앱 UI를 최적화하고 밀도 기준에 따라 여러 비트맵 그림을 준비하세요.
 </p>
 
 
@@ -42,7 +42,7 @@ dpi)">LDPI</acronym>, <acronym title="Midium density(중해상도, 160 dpi)">MDP
 
 
 <p>
-만질 수 있는 UI 요소의 경우, 일반적으로 48dp 단위를 기준으로 합니다.
+터치할 수 있는 UI 요소의 경우 일반적으로 48dp 단위를 기준으로 합니다.
 </p>
 
 
@@ -53,18 +53,18 @@ dpi)">LDPI</acronym>, <acronym title="Midium density(중해상도, 160 dpi)">MDP
 <h4>왜 48dp인가요?</h4>
 
 <p>
-평균적으로, 48dp는 실제 기기에서 9mm 정도(기기에 따라 다름)가 됩니다.
+평균적으로 48dp는 (기기에 따라 다르지만) 실제 기기에서 9mm 정도입니다.
 이 크기는 터치스크린에서 편하게 사용할 수 있는 추천 크기(7~10mm)에 속하며,
 사용자들이 손가락으로 원하는 행동을 믿을 만하고 정확하게 수행할 수 있습니다.
 </p>
 
 <p>
-여러분의 디자인 요소를 최소 가로세로 48dp로 잡을 경우 좋은 점은 다음과 같습니다.
+디자인 요소를 최소 가로세로 48dp로 잡을 경우 좋은 점은 다음과 같습니다.
 </p>
 
 <ul>
 <li>
-여러분의 앱을 어떤 기기에서 사용하든, 최소 추천 크기인 7mm보다 작아지지는 않습니다.
+여러분의 앱을 어떤 기기에서 사용하든 최소 추천 크기인 7mm보다 작아지지는 않습니다.
 </li>
 <li>
 가능한 모든 정보 밀도에 대해 대응할 수 있으면서 동시에 UI 요소에 대한 목표를 잡을 수 있습니다.
