--- a/style/iconography.html
+++ b/style/iconography.html
@@ -7,10 +7,10 @@ title: 아이콘 표시법
 
 
 
-<h2 id="launcher">런쳐</h2>
+<h2 id="launcher">런처</h2>
 
 
-<p>런쳐아이콘은 홈 또는 모든 앱 리스트 화면에서 보여집니다. 사용자는 홈의 바탕화면을 변경할 수 있기 때문에 여러분들의 런쳐아이콘은 어떠한 바탕화면에서도 잘 보일 수 있게 만들어져야 합니다.</p>
+<p>런처아이콘은 홈 또는 모든 앱 리스트 화면에서 보여집니다. 사용자는 홈의 바탕화면을 변경할 수 있기 때문에 여러분들의 런처아이콘은 어떠한 바탕화면에서도 잘 보일 수 있게 만들어져야 합니다.</p>
 
 
 <div class="layout-content-row">
@@ -36,11 +36,11 @@ title: 아이콘 표시법
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>모바일 기기에서 런쳐아이콘은 반드시 <strong>48x48 <acronym
+        <p>모바일 기기에서 런처아이콘은 반드시 <strong>48x48 <acronym
       title="Density-independent pixels(밀도 독립 픽셀). 1dp는 160dpi 화면에서 1픽셀.">dp</acronym></strong>이어야 합니다.</p>
 </li>
       <li class="no-bullet with-icon web">
-        <p>Google Play에서 런쳐아이콘은 반드시 <strong>512x512 pixels</strong>이어야 합니다.</p>
+        <p>Google Play에서 런처아이콘은 반드시 <strong>512x512 pixels</strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
@@ -306,7 +306,7 @@ title: 아이콘 표시법
   <div class="layout-content-col span-4">
 
 <h4>스타일</h4>
-<p>여러분의 런쳐아이콘과 동일한 의미를 가지는 아이콘을 사용해서 단순 명료하게 만드세요.</p>
+<p>여러분의 런처아이콘과 동일한 의미를 가지는 아이콘을 사용해서 단순 명료하게 만드세요.</p>
 
   </div>
 </div>
