--- a/style/writing.html
+++ b/style/writing.html
@@ -84,7 +84,7 @@ title: 문체
 </li>
 <li>
 <p><strong>필요한 것 말고는 설명하지 마세요.</strong>
-사소한 차이를 해설하려고 하지 마세요. 대부분은 그냥 잊어버릴 겁니다.
+사소한 차이를 해설하려고 하지 마세요. 대부분은 이해하지 못할 겁니다.
 </p>
 </li>
 <li>
