제스쳐 -> 제스처

--- a/building-blocks/seek-bars.html
+++ b/building-blocks/seek-bars.html
@@ -16,7 +16,7 @@ title: 탐색 바와 슬라이더
 <div class="vspace size-2">&#160;</div>
 
 <h4>예제</h4>
-<p>전화벨 볼륨 설정 대화형 슬라이더. 값은 하드웨어 볼륨 버튼 또는 대화형 제스쳐를 통해 설정할 수 있습니다.</p>
+<p>전화벨 볼륨 설정 대화형 슬라이더. 값은 하드웨어 볼륨 버튼 또는 대화형 제스처를 통해 설정할 수 있습니다.</p>
 
   </div>
 </div>
