--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -257,7 +257,7 @@ title: 디자인 원칙
 스스로 깨닫고 이해하는 것만큼 즐거운 일도 없습니다.
 UI 패턴이나 다른 안드로이드 앱에서 사용하는 방법들을 적용해보세요.
 여러분의 앱이 더 배우기 쉬워집니다.
-가령, 스와이프 제스쳐는 탐색을 쉽게 만들어주는 패턴입니다.
+가령, 스와이프 제스처는 탐색을 쉽게 만들어주는 패턴입니다.
 </p>
 
   </div>
