--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -263,7 +263,7 @@ title: 애플리케이션 구조
 
 <img src="../media/app_structure_gallery_filmstrip.png">
 <div class="figure-caption">
-  갤러리는 이미지 들을 왼쪽이나 오른쪽으로 이동하는 스와이프 제스쳐를 제공하는 것 이외에 필름 스트립 컨트롤을 제공합니다.
+  갤러리는 이미지 들을 왼쪽이나 오른쪽으로 이동하는 스와이프 제스처를 제공하는 것 이외에 필름 스트립 컨트롤을 제공합니다.
   필름 스트립 컨트롤에서는 특정 이미지로 바로 이동할 수 있습니다.
 </div>
 
