--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 제스쳐
+title: 제스처
 ---
-<p>우리 앱은 사용자가 제스쳐로 스크린 객체를 조작하여
-상호작용합니다. 아래의 표는 안드로이드가 제공하는 핵심 제스쳐 집합입니다.</p>
+<p>우리 앱은 사용자가 제스처로 스크린 객체를 조작하여
+상호작용합니다. 아래의 표는 안드로이드가 제공하는 핵심 제스처 집합입니다.</p>
 
 
 <div class="layout-content-row">
@@ -65,7 +65,7 @@ title: 제스쳐
   <div class="layout-content-col span-4">
 
     <img src="../media/gesture_doubletouch.png"><h4>더블 터치</h4>
-<p>컨텐츠를 확대합니다. 또, 텍스트 선택을 위한 부차 제스쳐로도 사용됩니다.</p>
+<p>컨텐츠를 확대합니다. 또, 텍스트 선택을 위한 부차 제스처로도 사용됩니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
