--- a/patterns/swipe-views.html
+++ b/patterns/swipe-views.html
@@ -5,7 +5,7 @@ title: 뷰 스와이프
 <p>효율적인 탐색은 잘 설계된 앱의 초석 중 하나입니다. 
 앱은 일반적으로 계층적인 방식으로 구축되기 때문에, 
 수평 탐색은 수직 구조를 평평하게 만들어 관련 항목들을 더 빠르고 더 즐겁게 접근하도록 도와줄 것입니다.
-뷰 스와이프는 유저가 간단한 제스쳐로 효율적으로 항목과 항목 사이를 이동할 수 있게 함으로
+뷰 스와이프는 유저가 간단한 제스처로 효율적으로 항목과 항목 사이를 이동할 수 있게 함으로
 더 유려한 느낌으로 데이터를 열람하고 소비할 수 있게 해 줍니다.</p>
 
 <h2 id="detail-views">디테일 뷰 간에 스와이프하기</h2>
@@ -25,12 +25,12 @@ title: 뷰 스와이프
 이른바 "포고 스티킹(pogo-sticking)"을 요구하게 됩니다.</p>
 
 <p>사용자가 연속해서 여러 항목을 보고 싶어하는 경우,
-다음/이전 디테일 뷰를 탐색하는데 스와이프 제스쳐를 사용함으로 포고 스티킹을 방지할 수 있습니다.</p>
+다음/이전 디테일 뷰를 탐색하는데 스와이프 제스처를 사용함으로 포고 스티킹을 방지할 수 있습니다.</p>
 
 
 <img src="../media/swipe_views2.png">
 <div class="figure-caption">
-  스와이프 제스쳐를 사용해 이메일 메시지를 연속으로 훑어봅니다.
+  스와이프 제스처를 사용해 이메일 메시지를 연속으로 훑어봅니다.
 </div>
 
 
@@ -44,7 +44,7 @@ title: 뷰 스와이프
       <video class="play-on-hover" autoplay><source src="../media/swipe_tabs.mp4" type="video/mp4"><source src="../media/swipe_tabs.webm" type="video/webm"><source src="../media/swipe_tabs.ogv" type="video/ogg"></video>
 </div>
     <div class="figure-caption">
-      최상위 수준 화면에서 스와이프 제스쳐를 사용하는 피플 앱.
+      최상위 수준 화면에서 스와이프 제스처를 사용하는 피플 앱.
       <div class="video-instructions">&#160;</div>
     </div>
 
@@ -61,11 +61,11 @@ title: 뷰 스와이프
 <p>디테일 뷰 혹은 탭 간을 빠르게 이동하기 위해 스와이프를 사용하세요.</p>
 </li>
 <li>
-<p>사용자가 스와이프 제스쳐를 하는 그대로 뷰 사이를 이동시키세요.
- 뷰 사이의 전환하기 위해 제스쳐가 끝나는 걸 기다리지 마세요.</p>
+<p>사용자가 스와이프 제스처를 하는 그대로 뷰 사이를 이동시키세요.
+ 뷰 사이의 전환하기 위해 제스처가 끝나는 걸 기다리지 마세요.</p>
 </li>
 <li>
-<p>이전에 이전/다음 탐색을 위해 버튼을 사용해왔다면, 스와이프 제스쳐로 교체하세요.</p>
+<p>이전에 이전/다음 탐색을 위해 버튼을 사용해왔다면, 스와이프 제스처로 교체하세요.</p>
 </li>
 <li>
 <p>디테일 뷰에서 사용자가 현재 표시되는 항목의 상대 목록 위치가 어딘지 알 수 있도록
