--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -2,7 +2,7 @@
 layout: default
 title: 셀렉션
 ---
-<p>안드로이드 3.0에서 <em>롱 프레스</em>(같은 위치를 잠시 누르는 터치) 제스쳐는 데이터를 선택하는 일반적인 제스쳐로 소개되었습니다. 
+<p>안드로이드 3.0에서 <em>롱 프레스</em>(같은 위치를 잠시 누르는 터치) 제스처는 데이터를 선택하는 일반적인 제스처로 소개되었습니다. 
 이것은 여러분 앱의 다중 선택과 컨텍스트 액션 처리 방식에 영향을 주었습니다.</p>
 
 
@@ -13,16 +13,16 @@ title: 셀렉션
   <div class="layout-content-col span-6">
 
 <h4>무엇이 바뀌었는가?</h4>
-<p>이전버전의 안드로이드에서, 롱 프레스 제스쳐는 선택된 아이템의 컨텍스트
+<p>이전버전의 안드로이드에서, 롱 프레스 제스처는 선택된 아이템의 컨텍스트
     액션을 컨텍스트 메뉴에 표시하기위해 널리 사용되었습니다.</p>
-<p>이 패턴은 안드로이드 3.0에서 바뀌었습니다. 롱 프레스 제스쳐는 이제
+<p>이 패턴은 안드로이드 3.0에서 바뀌었습니다. 롱 프레스 제스처는 이제
     컨텍스트 액션 바(CAB, contextual action bar)로 불리우는 새로운 요소에 들어있는 데이터 선택, 컨텍스트 액션, 선택 관리 기능을 위해 쓰여집니다. </p>
 
   </div>
   <div class="layout-content-col span-7">
 
     <img src="../media/selection_context_menu.png"><div class="figure-caption">
-      컨텍스트 메뉴를 보여주기위한 롱 프레스 제스쳐의 전형적인 사용.
+      컨텍스트 메뉴를 보여주기위한 롱 프레스 제스처의 전형적인 사용.
     </div>
 
   </div>
@@ -87,7 +87,7 @@ title: 셀렉션
 <p>여러분의 앱이 다중 데이터 아이템 선택을 지원할 때마다, 컨텍스트 액션 바(CAB)를 사용하십시요.</p>
 </li>
 <li>
-<p>롱 프레스 제스쳐를 배타적으로 남겨두세요. 전형적인 컨텍스트 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
+<p>롱 프레스 제스처를 배타적으로 남겨두세요. 전형적인 컨텍스트 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
 </li>
 <li>
 <p>만약 리스트에서 다중 선택을 지원하지 않는 다면, 롱 프레스는 아무 것도 하지않게 두세요.</p>
