네비게이션 -> 내비게이션

--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -149,7 +149,7 @@ title: 액션 바
 <ul>
 <li>항목을 더 터치해 추가 요소를 선택할 수 있습니다.</li>
 <li>선택 중인 모든 데이터 항목에 적용되는 액션을 CAB에서 실행할 수 있습니다. 작업이 끝난 후 CAB는 자동으로 사라집니다.</li>
-<li>네비게이션 바의 이전 버튼이나 CAB의 체크마크 버튼으로 CAB를 없앨 수 있습니다. 이 작업은 모든 선택 표시와 함께 CAB를 제거합니다.</li>
+<li>내비게이션 바의 이전 버튼이나 CAB의 체크마크 버튼으로 CAB를 없앨 수 있습니다. 이 작업은 모든 선택 표시와 함께 CAB를 제거합니다.</li>
 </ul>
 <p>애플리케이션이 사용자가 데이터를 길게 눌러 선택하는 동작을 지원한다면 언제나 CAB를 사용해주세요.
  여러분은 사용자가 수행하도록 하고 싶은 작업을 추가하기 위해 CAB의 액션 컨텐츠를 조정할 수도 있습니다.</p>
