--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -73,8 +73,8 @@ title: 순수한 안드로이드
   <div class="layout-content-col span-5">
 
 <h4>액션 바의 뒤로 가기 버튼에 레이블을 달지 마세요</h4>
-<p>다른 플랫폼에서는 사용자가 애플리케이션의 상위 계층으로 이동할 수 있도록 하기 위해 레이블이 붙은 명시적인 뒤로 가기 버튼을 사용합니다. 안드로이드에서는 그와 달리, 상위 계층으로 이동할 때는 주 액션 바의 앱 아이콘을, 일시적인 이동을 할 때는 네비게이션 바의 뒤로 가기 버튼을 사용합니다. 자세한 내용은 <a href="navigation.html">네비게이션</a> 패턴을 참고하세요.</p>
-<p>플랫폼 전반에서 일관성 있는 네비게이션 경험을 제공할 수 있도록 이 지침을 따르십시오.</p>
+<p>다른 플랫폼에서는 사용자가 애플리케이션의 상위 계층으로 이동할 수 있도록 하기 위해 레이블이 붙은 명시적인 뒤로 가기 버튼을 사용합니다. 안드로이드에서는 그와 달리, 상위 계층으로 이동할 때는 주 액션 바의 앱 아이콘을, 일시적인 이동을 할 때는 내비게이션 바의 뒤로 가기 버튼을 사용합니다. 자세한 내용은 <a href="navigation.html">내비게이션</a> 패턴을 참고하세요.</p>
+<p>플랫폼 전반에서 일관성 있는 내비게이션 경험을 제공할 수 있도록 이 지침을 따르십시오.</p>
 
   </div>
   <div class="layout-content-col span-8">
