--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -39,7 +39,7 @@ title: UI 개요
     <img src="../media/ui_overview_recents.png"><h4>최근 앱(Recents) 화면</h4>
 <p>최근 앱은 최근에 사용한 앱 사이를 이동하는 효율적인 방법을 제공합니다.
 최근 앱은 진행중인 작업 사이의 명확한 탐색 경로도 제공합니다.</p>
-<p>네비게이션 바 오른쪽의 최근 앱 버튼은 사용자가 최근에 사용한 앱 목록을 표시합니다.
+<p>내비게이션 바 오른쪽의 최근 앱 버튼은 사용자가 최근에 사용한 앱 목록을 표시합니다.
 이 목록은 가장 최근에 사용한 앱을 아래부터 역순으로 표시합니다.</p>
 <p>앱을 터치해 해당 앱으로 전환하거나 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
 
@@ -66,13 +66,13 @@ title: UI 개요
 상태 표시줄에서 아래로 스와이프해 세부 알림 사항을 볼 수 있습니다.</p>
 </li>
 <li>
-<h4>네비게이션 바</h4>
-<p>안드로이드 4.0 폰에 추가된 네비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 나타납니다.
+<h4>내비게이션 바</h4>
+<p>안드로이드 4.0 폰에 추가된 내비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 나타납니다.
 이전, 홈, 최근 앱 컨트롤이 놓여있고 안드로이드 2.3 이하 버전용으로 만들어진 앱은 메뉴 컨트롤도 보여줍니다.</p>
 </li>
 <li>
 <h4>결합 바(Combined Bar)</h4>
-<p>타블렛 형태의 기기에서는 상태 표시줄과 네비게이션 바를 하나의 바로 합쳐 화면 아래에 둡니다.</p>
+<p>타블렛 형태의 기기에서는 상태 표시줄과 내비게이션 바를 하나의 바로 합쳐 화면 아래에 둡니다.</p>
 </li>
 </ol>
 </div>
