--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -41,7 +41,7 @@ title: 제스처
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>누르고, 이동하고, 뗍니다</p>
+    <p>누르고, 움직이고, 뗍니다</p>
 </li>
 </ul>
 </div>
@@ -58,7 +58,7 @@ title: 제스처
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>롱 프레스, 옮기고, 뗍니다</p>
+    <p>길게 누르고, 움직이고, 뗍니다</p>
 </li>
 </ul>
 </div>
@@ -99,7 +99,7 @@ title: 제스처
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>두 손가락으로 누르고, 안으로 옮기고, 뗍니다</p>
+    <p>두 손가락으로 누르고, 안으로 좁히고, 뗍니다</p>
 </li>
 </ul>
 </div>
