--- a/style/iconography.html
+++ b/style/iconography.html
@@ -153,7 +153,7 @@ title: 아이콘 표시법
 
 <h4>스타일</h4>
 <p>단순하게 그리고 부드러운 곡선과 매끈한 형태를 가지게 하세요. 만약 아이콘이 얇다면, 표시영역이 채워지도록 좌 또는 우로 45&#176; 회전 하세요.
-두꺼운 선과 표시하지 않는 공간은 최소 2dp이상이어야 합니다.</p>
+선의 굵기와 여백의 너비는 최소 2dp이상이어야 합니다.</p>
 
   </div>
 </div>
