디바이스 -> 기기

--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -30,7 +30,7 @@ title: UI 개요
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_all_apps.png"><h4>모든 앱 화면</h4>
-<p>모든 앱 화면에서 디바이스에 설치되어 있는 모든 앱과 위젯을 볼 수 있습니다.</p>
+<p>모든 앱 화면에서 기기에 설치되어 있는 모든 앱과 위젯을 볼 수 있습니다.</p>
 <p>사용자는 모든 앱 화면에서 앱이나 위젯 아이콘을 끌어 홈 화면 빈 곳 어디에나 배치할 수 있습니다.</p>
 
   </div>
@@ -67,7 +67,7 @@ title: UI 개요
 </li>
 <li>
 <h4>내비게이션 바</h4>
-<p>안드로이드 4.0 폰에 추가된 내비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 나타납니다.
+<p>안드로이드 4.0 폰에 추가된 내비게이션 바는 전통적인 하드웨어 키가 없는 기기에만 나타납니다.
 이전, 홈, 최근 앱 컨트롤이 놓여있고 안드로이드 2.3 이하 버전용으로 만들어진 앱은 메뉴 컨트롤도 보여줍니다.</p>
 </li>
 <li>
