--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -93,7 +93,7 @@ title: 액션 바
 
 
 <p>애플리케이션을 만들 때 고려해야 할 중요한 UI 이슈 중 하나는
-  어떻게 다양한 디바이스의 화면 크기와 화면 회전에 맞출 것인가 하는 점입니다.</p>
+  어떻게 다양한 기기의 화면 크기와 화면 회전에 맞출 것인가 하는 점입니다.</p>
 
 <p><em>분할 액션 바</em>를 사용해 이런 변경에 대응할 수 있는데,
   분할 액션 바는 메인 액션 바 밑 혹은 화면 하단 등에 배치하는 다중 바로 액션 바 컨텐츠를 분배할 수 있도록 해줍니다.</p>
