--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 셀렉션
+title: 선택
 ---
-<p>안드로이드 3.0에서 <em>롱 프레스</em>(같은 위치를 잠시 누르는 터치) 제스처는 데이터를 선택하는 일반적인 제스처로 소개되었습니다. 
-이것은 여러분 앱의 다중 선택과 컨텍스트 액션 처리 방식에 영향을 주었습니다.</p>
+<p>안드로이드 3.0에서는 데이터를 선택하기 위한 방법으로 <em>롱 프레스</em>(같은 위치를 잠시 누르는 터치) 제스처를 도입했습니다.
+이 제스처는 여러분의 앱이 다중 선택이나 컨텍스트 액션 등을 어떻게 다루어야 하는지에 영향을 줍니다.</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -12,11 +12,14 @@ title: 셀렉션
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>무엇이 바뀌었는가?</h4>
-<p>이전버전의 안드로이드에서, 롱 프레스 제스처는 선택된 아이템의 컨텍스트
-    액션을 컨텍스트 메뉴에 표시하기위해 널리 사용되었습니다.</p>
-<p>이 패턴은 안드로이드 3.0에서 바뀌었습니다. 롱 프레스 제스처는 이제
-    컨텍스트 액션 바(CAB, contextual action bar)로 불리우는 새로운 요소에 들어있는 데이터 선택, 컨텍스트 액션, 선택 관리 기능을 위해 쓰여집니다. </p>
+<h4>무엇이 바뀌었나요?</h4>
+<p>
+이전 버전 안드로이드에서 롱 프레스 제스처는 선택한 항목에 어떤 행동을 수행할지 컨텍스트 메뉴를 띄우는 제스처로 널리 사용되었습니다.
+</p>
+<p>
+이 패턴은 안드로이드 3.0에서 바뀌었습니다.
+롱 프레스 제스처로 항목을 선택하고, 컨텍스트 액션 바(CAB, contextual action bar)를 통해 그 항목에 관련된 행동을 수행하거나 선택 관리 기능을 수행합니다.
+</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -29,7 +32,7 @@ title: 셀렉션
 </div>
 
 
-<h4>컨텍스트 액션 바 (CAB)의 사용</h4>
+<h4>컨텍스트 액션 바 (CAB) 사용하기</h4>
 
 <p>선택 컨텍스트 액션 바는 데이터가 선택되어있는 동안 여러분의 현재 액션바
 위에 중첩되는 임시 액션바 입니다. CAB는 사용자가 선택 가능한 데이터를
@@ -62,7 +65,7 @@ title: 셀렉션
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>컨텍스트 액션 바의 액션들 선택하기</h4>
+<h4>컨텍스트 액션 바의 액션 선택하기</h4>
 <p>여러분들은 컨텍스트 액션 바에 표시할 액션과 요소들을 결정 할 수 있습니다. 어느 아이템이 꼭대기에 위치할지,액션 오버플로우에 위치할지를 결정하기위해 <a href="actionbar.html">액션 바 패턴</a> 가이드라인을 사용하세요.</p>
 <h4>컨텍스트 액션 바의 액션을 동적으로 변경하기</h4>
 <p>사용자가 선택에 아이템을 더 추가하는 대부분의 경우, 여러분들은 컨텍스트
